--- a/server/requirements-server.txt
+++ b/server/requirements-server.txt
@@ -1,10 +1,11 @@
+cassandra-driver==3.7.1
 click==6.6
 Flask==0.11.1
 Flask-Jsonpify==1.5.0
-Flask-PyMongo==0.4.1
+futures==3.0.5
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
-pymongo==3.3.0
-simplejson==3.8.2
+simplejson==3.10.0
+six==1.10.0
 Werkzeug==0.11.11
